<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:stretchColumns="0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_screen_background">

    <EditText android:id="@+id/editId"
        android:inputType="number"
        android:layout_x="0dp"
        android:layout_y="90dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/editbox_dropdown_background_dark"
        android:textColor="#ffffff"
        android:hint="ID" />

    <EditText android:id="@+id/editName"
        android:inputType="text"
        android:layout_x="0dp"
        android:layout_y="133dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/editbox_dropdown_background_dark"
        android:autoText="false"
        android:textColor="#ffffff"
        android:hint="Pizza Type" />

    <EditText android:id="@+id/editPrice"
        android:inputType="numberDecimal"
        android:layout_x="0dp"
        android:layout_y="176dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/editbox_dropdown_background_dark"
        android:autoText="false"
        android:textColor="#ffffff"
        android:hint="Amount" />
    <Button	  android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/MenuButton"
        android:layout_x="58dp"
        android:layout_y="224dp" />
    <Button	  android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_x="58dp"
        android:layout_y="365dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/MenuButton" />n
    <Button   android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_x="58dp"
        android:layout_y="318dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/MenuButton" />
    <Button   android:id="@+id/btnView"
        android:text="@string/view"
        android:layout_x="58dp"
        android:layout_y="271dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/MenuButton" />
    <Button   android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_x="58dp"
        android:layout_y="412dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/MenuButton" />
    <Button   android:id="@+id/btnShowInfo"
        android:text="@string/show_info"
        android:layout_x="58dp"
        android:layout_y="459dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        style="@style/MenuButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="87dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/pizza"
        android:layout_x="106dp"
        android:layout_y="1dp" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="80dp"
        android:id="@+id/imageView2"
        android:layout_x="212dp"
        android:layout_y="6dp"
        android:src="@drawable/admin" />
</AbsoluteLayout>
